fix li elements in schedule section on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -376,7 +376,7 @@ footer {
     max-width: 400px;
     width: 100%;
   }
-  li {
+  .schedule li {
     flex-direction: column;
   }
 }
